updated allowed hosts

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 SECRET_KEY=django-insecure-dvmz#0-q8=vry#45j(myua52v5po2m$7n5cd6_o&u_^ael=0)7
 DEBUG=False
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,bmw-hub.onrender.com
+
 
 PESAPAL_CONSUMER_KEY=qkio1BGGYAXTu2JOfm7XSXNruoZsrqEW
 PESAPAL_CONSUMER_SECRET=osGQ364R49cXKeOYSpaOnT++rHs=
