--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,bmw-hub.onrender.com
 PESAPAL_CONSUMER_KEY=qkio1BGGYAXTu2JOfm7XSXNruoZsrqEW
 PESAPAL_CONSUMER_SECRET=osGQ364R49cXKeOYSpaOnT++rHs=
 PESAPAL_CALLBACK_URL=https://e836-41-90-211-161.ngrok-free.app/mpesa/callback/
+
+CLOUDINARY_CLOUD_NAME=duqbf8jko
+CLOUDINARY_API_KEY=491753349419359
+CLOUDINARY_API_SECRET=mdwG-Opn_XnZMFnnPm_HBzFexks
