--- a/.env
+++ b/.env
@@ -14,3 +14,12 @@ MPESA_CONSUMER_SECRET=Q8oVejAlWZr0JFCgq4b3I6punG7Bh0GSqiKRCLkIk5jQtNwR3FD5FJWSTU
 MPESA_SHORTCODE=174379
 MPESA_PASSKEY=bfb279f9aa9bdbcf158e97dd71a467cd2e0c1bb1ef65b...
 MPESA_CALLBACK_URL=https://e8251d3cc292.ngrok-free.app/mpesa/callback/
+
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=oswereenock@gmail.com
+EMAIL_HOST_PASSWORD=ijns kweg kyjh plad
+DEFAULT_FROM_EMAIL=BMWPartsHub <oswereenock@gmail.com>
+
